// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image - imported as '{ Img }' should render image correctly without width 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  />
</div>
`;

exports[`Image - imported as '{ Img }' should render image with custom dimensions correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="By Elisa Decker, from her series "Sidewalk""
    class="emotion-0 emotion-1"
    height="547"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
    width="445"
  />
</div>
`;

exports[`Image - imported as '{ Img }' should render image with only srcset correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - imported as '{ Img }' should render image with srcset and fallbackSrcset correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
    width="1024"
  />
</div>
`;

exports[`Image - imported as '{ Img }' should render landscape image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - imported as '{ Img }' should render portrait image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    class="emotion-0 emotion-1"
    height="1280"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    width="1024"
  />
</div>
`;

exports[`Image - imported as '{ Img }' should render square image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Tracks through the snow"
    class="emotion-0 emotion-1"
    height="1024"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render image correctly without width 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render image with custom dimensions correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="By Elisa Decker, from her series "Sidewalk""
    class="emotion-0 emotion-1"
    height="547"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
    width="445"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render image with only srcset correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render image with srcset and fallbackSrcset correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
    width="1024"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render landscape image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render portrait image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    class="emotion-0 emotion-1"
    height="1280"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    width="1024"
  />
</div>
`;

exports[`Image - imported as default 'Image' should render square image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Tracks through the snow"
    class="emotion-0 emotion-1"
    height="1024"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render image correctly without width 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render image with custom dimensions correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="By Elisa Decker, from her series "Sidewalk""
    class="emotion-0 emotion-1"
    height="547"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
    width="445"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render image with only srcset correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render image with srcset and fallbackSrcset correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
    width="1024"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render landscape image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Student sitting an exam"
    class="emotion-0 emotion-1"
    height="576"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render portrait image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    class="emotion-0 emotion-1"
    height="1280"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    width="1024"
  />
</div>
`;

exports[`Image - with Fade-in effect' should render square image correctly 1`] = `
.emotion-0 {
  display: block;
  width: 100%;
}

<div>
  <img
    alt="Tracks through the snow"
    class="emotion-0 emotion-1"
    height="1024"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
    width="1024"
  />
</div>
`;
